[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/enemies/potato_fire.png" type="Texture" id=1]
[ext_resource path="res://sprites/enemies/potato.png" type="Texture" id=2]
[ext_resource path="res://scripts/BionicPotato.gd" type="Script" id=3]
[ext_resource path="res://scennes/HpBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/batata_ataque.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Atack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Atack/FireSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Atack/CollisionShape2D:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 62, -0.25, 0, 0.25, 0, 198, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Atack/CollisionShape2D:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 240, -0.25, 0, 0.25, 0, 528, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 1 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5, 12 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Atack:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 0.98 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
length = 0.9
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Atack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=10]
radius = 116.0
height = 204.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 0.01
height = 0.01

[sub_resource type="CircleShape2D" id=9]
radius = 538.199

[node name="BionicPotato" type="Area2D" groups=["ENEMY"]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, 0 )
texture = ExtResource( 2 )
hframes = 12
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 7 )
anims/attack = SubResource( 4 )
anims/idle = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 82 )
shape = SubResource( 10 )

[node name="Atack" type="Area2D" parent="."]
visible = false

[node name="FireSprite" type="Sprite" parent="Atack"]
texture = ExtResource( 1 )
hframes = 6
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Atack"]
position = Vector2( 0, 259 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="AttackSound" type="AudioStreamPlayer" parent="Atack"]
stream = ExtResource( 5 )

[node name="SensorArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorArea2D"]
position = Vector2( -3, 86 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="HpBar" parent="." instance=ExtResource( 4 )]
position = Vector2( 2, -146 )
scale = Vector2( 2, 2 )
background_color = Color( 0.709804, 0.0862745, 0.321569, 1 )

[connection signal="area_entered" from="Atack" to="." method="_on_Atack_area_entered"]
[connection signal="area_entered" from="SensorArea2D" to="." method="_on_SensorArea2D_area_entered"]
[connection signal="area_exited" from="SensorArea2D" to="." method="_on_SensorArea2D_area_exited"]
